--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -8,65 +8,75 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="515dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteY="-4dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="93dp"
-            android:layout_height="38dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/mail" />
-
-        <TextView
-            android:id="@+id/Seller"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_height="53dp"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteY="-4dp">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/mail" />
 
-    <LinearLayout
-        android:layout_width="388dp"
-        android:layout_height="47dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="41dp">
+            <TextView
+                android:id="@+id/Seller"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="30dp"
+                android:text="seller" />
 
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/product" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/product"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="41dp">
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="124dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/product" />
+
+            <TextView
+                android:id="@+id/product"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="30dp"
+                android:text="product" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:ems="10"
+            android:hint="input your message here"
+            android:inputType="textMultiLine"
+            tools:layout_editor_absoluteX="1dp"
+            tools:layout_editor_absoluteY="88dp" />
+
+        <Button
+            android:id="@+id/send"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:onClick="send"
+            android:text="SEND"
+            tools:layout_editor_absoluteX="148dp"
+            tools:layout_editor_absoluteY="397dp" />
     </LinearLayout>
-
-    <EditText
-        android:id="@+id/message"
-        android:layout_width="382dp"
-        android:layout_height="258dp"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="88dp" />
-
-    <Button
-        android:id="@+id/send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="send"
-        android:text="SEND"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="397dp" />
 
 </android.support.constraint.ConstraintLayout>
