--- a/app/src/main/res/layout/activity_message_list_buyer.xml
+++ b/app/src/main/res/layout/activity_message_list_buyer.xml
@@ -7,19 +7,45 @@
     tools:context="com.example.ciheng.shoppingmap.View.MessageList">
 
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_refresh"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#EEEEEE"
-            android:orientation="vertical"
-            tools:listitem="@layout/list_item" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:theme="@style/myTheme">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Message List"
+                android:textSize="28dp"
+                android:textColor="@color/cardview_light_background"
+                android:textAppearance="@style/TextAppearance.AppCompat" />
+
+        </android.support.v7.widget.Toolbar>
+
+
+
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#EEEEEE"
+                android:orientation="vertical"
+                tools:listitem="@layout/list_item" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </LinearLayout>
+
 </RelativeLayout>
