--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -33,4 +33,15 @@
         android:layout_alignRight="@+id/sellButton"
         />
 
+    <Button
+        android:id="@+id/MESSAGES"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buyerButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:onClick="startMessageActivity"
+        android:text="MESSAGES"
+        android:textSize="25sp" />
+
 </RelativeLayout>
