--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -35,7 +35,7 @@
         <TextView
             android:id="@+id/messages"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:textColor="@android:color/darker_gray" />
 
